<resources>
    <string name="app_name">Winner Classes</string>
    <string name="title_activity_admin">adminActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title_teacher">Welcome Teacher !</string>
    <string name="nav_header_subtitle">merajsiddieque@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="addStd">Assign Student</string>
    <string name="home">Home</string>
    <string name="addTeacher">Assign Teacher</string>
    <string name="logout">Logout</string>
    <string name="messages">Messages</string>
    <string name="resetpass">Reset Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_teacher">teacherActivity</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_student">studentActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="title_activity_std">StdActivity</string>
</resources>