<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/Stdhome"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/StdMessages"
            android:icon="@drawable/message"
            android:title="@string/messages" />
        <item
            android:id="@+id/StdResetPass"
            android:icon="@drawable/reset"
            android:title="@string/resetpass" />
        <item
            android:id="@+id/StdLogout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />
    </group>
</menu>